@@ -2,7 +2,10 @@ package com.jumkid.activity.controller;
 
 import com.fasterxml.jackson.databind.exc.InvalidFormatException;
 import com.jumkid.activity.exception.ActivityNotFoundException;
+import com.jumkid.activity.exception.ContentResourceNotFoundException;
 import com.jumkid.share.controller.response.CustomErrorResponse;
+import com.jumkid.share.exception.ModificationDatetimeOutdatedException;
+import jakarta.validation.ConstraintViolationException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -10,9 +13,7 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import javax.validation.ConstraintViolationException;
 import java.util.Calendar;
-import java.util.stream.Collectors;
 
 import static org.springframework.http.HttpStatus.*;
 
@@ -20,10 +21,10 @@ import static org.springframework.http.HttpStatus.*;
 @Slf4j
 public class ExceptionHandlingAdvice {
 
-    @ExceptionHandler({ActivityNotFoundException.class})
+    @ExceptionHandler({ActivityNotFoundException.class, ContentResourceNotFoundException.class})
     @ResponseStatus(NOT_FOUND)
     public CustomErrorResponse handle(Exception ex) {
-        log.info("Entity could not be found.", ex);
+        log.info("Data could not be found.", ex);
         return new CustomErrorResponse(Calendar.getInstance().getTime(), ex.getMessage());
     }
 
@@ -33,8 +34,8 @@ public class ExceptionHandlingAdvice {
         log.warn("The provided argument is missing or invalid.", ex);
         return CustomErrorResponse.builder()
                 .timestamp(Calendar.getInstance().getTime())
-                .property(ex.getFieldErrors().stream().map(FieldError::getField).collect(Collectors.toList()))
-                .details(ex.getFieldErrors().stream().map(FieldError::getDefaultMessage).collect(Collectors.toList()))
+                .property(ex.getFieldErrors().stream().map(FieldError::getField).toList())
+                .details(ex.getFieldErrors().stream().map(FieldError::getDefaultMessage).toList())
                 .build();
     }
 
@@ -48,6 +49,13 @@ public class ExceptionHandlingAdvice {
     @ExceptionHandler({ConstraintViolationException.class})
     @ResponseStatus(BAD_REQUEST)
     public CustomErrorResponse handle(ConstraintViolationException ex) {
+        return new CustomErrorResponse(Calendar.getInstance().getTime(), ex.getMessage());
+    }
+
+    @ExceptionHandler(ModificationDatetimeOutdatedException.class)
+    @ResponseStatus(CONFLICT)
+    public CustomErrorResponse handleMethodArgumentNotValidException(ModificationDatetimeOutdatedException ex) {
+        log.warn("The target data has been updated.", ex);
         return new CustomErrorResponse(Calendar.getInstance().getTime(), ex.getMessage());
     }
 
